tests/errors/kind_invalid_int_of_logical.f90
program kind_invalid_of_logical
    implicit none
    logical(10) :: x
end program
